split off text editor scripts

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,6 +52,10 @@
 
   {{> clientSideCodeErrorReporter }}
 
+  {{#if loggedIn}}
+  {{> textEditorScripts}}
+  {{/if}}
+
   {{> onPostLoadScripts }}
 
 </head>
