clean up/out some old files

--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -62,7 +62,7 @@
             </div>
           {{/gt}}
           <div class="container commentsList" id="postsContainer"></div>
-          {{> infinitescrollrequests}}
+          {{> infiniteScrollLoadingSpinner}}
         {{/unless}}
       </div>
       {{#if loggedIn}}
