--- a/views/tag.handlebars
+++ b/views/tag.handlebars
@@ -3,7 +3,7 @@
     <h3 class="page-header mx-2">#{{name}}</h3>
 		<div class="container commentsList" id="postsContainer">
 		</div>
-    {{> infinitescrollrequests}}
+    {{> infiniteScrollLoadingSpinner}}
   </div>
 </div>
 
