probably fix weird new post feed reload thing

--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -325,7 +325,7 @@
       },
       append: '.post',
       prefill: true,
-      history: false,
+      history: true, //to be clear, this should not work
       status: '.page-load-status'
     });
   }
