--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -36,8 +36,7 @@ $(function(){
     append: '.content-box',
     prefill: true,
     history: true,
-    status: '.page-load-status',
-    debug: true
+    status: '.page-load-status'
   });
 
   $('#searchForm').submit(function (e) {
