--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -94,7 +94,7 @@ $('#postsContainer').infiniteScroll({
   },
   append: '.post',
   prefill: true,
-  history: false,
+  history: true, //to be clear, this should not work
   status: '.page-load-status'
 });
 </script>
