further client-side code organization

--- a/views/partials/scriptPartials/newCommentFormTemplate.handlebars
+++ b/views/partials/scriptPartials/newCommentFormTemplate.handlebars
@@ -1,5 +1,5 @@
 {{!-- embedded at the top of newPostOrCommentScripts.handlebars --}}
-<script id="new-comment-form-template" type="text/x-handlebars-template">
+<script id="new-comment-form-template" type="text/custom-template">
 <div class="new-comment-form" data-comment-type="\{{comment_type}}" data-post-id="\{{post_id}}" data-comment-id="\{{comment_id}}">
   <div class="form-row">
     <div class="editable-post-content editable-text" id="postContent">
