--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -125,7 +125,7 @@
     </div>
   {{/or}}
 {{/and}}
-{{#and loggedIn usersWhoTrustThemData }}
+{{#and loggedIn usersWhoTrustThemData.length }}
   <h5>Trusted by{{#gt usersWhoTrustThemData.length 30}} <a class="text-dark user-list-toggle collapsed" href="#trustedByUsersList" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="trustedByUsersList"><i class="fas fa-caret-right"></i></a>{{/gt}}</h5>
   <div id="trustedByUsersList" class="user-list{{#gt usersWhoTrustThemData.length 30}} collapse{{else}} d-flex{{/gt}}">
     {{#each usersWhoTrustThemData}}
