--- a/views/partials/comment_dynamic.handlebars
+++ b/views/partials/comment_dynamic.handlebars
@@ -19,7 +19,7 @@
         </section>
     {{/if}}
     {{#if imagesExist}}
-        {{{image_gallery}}}
+        {{{galleryHTML}}}
     {{/if}}
     <footer class="toolbar">
         {{#gt depth 4}}{{else}}
