small bug fixes

--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -68,7 +68,7 @@
             <div class="abbreviated-content content-warning-content" style="height:0">
         {{/if}}
         {{{this.parsedContent}}}
-        {{#if this.galleryHTML}}
+        {{#if this.hasImages}}
             {{{galleryHTML}}}
         {{/if}}
         {{#if this.contentWarnings}}
