--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -90,7 +90,7 @@ $(function(){
     var newForm = $(document.getElementById("new-comment-form-template").innerHTML);
     newForm.attr('data-comment-type','child').attr('data-post-id',postID).attr('data-comment-id',commentID);
     newForm.appendTo(commentContainer);
-    attachQuill(newForm.find('.editable-text')[0],"Reply to this post with a good reply")
+    attachQuill(newForm.find('.editable-text')[0],"Write a good reply to this post.")
     tribute.attach($(".ql-editor"));
     //Scroll to newly created form
     if (newForm[0].getBoundingClientRect().bottom > $(window).height()-50){
@@ -593,5 +593,5 @@ $(function(){
       movementEnded();
     });
   }
-  
+
 </script>
