--- a/views/partials/scriptPartials/textEditorScripts.handlebars
+++ b/views/partials/scriptPartials/textEditorScripts.handlebars
@@ -18,7 +18,7 @@
                 }
             }
         },
-        placeholder: placeholder ? placeholder : 'Write something, highlight text to format.',
+        placeholder: placeholder ? placeholder : 'Write a good post.',
         theme: 'bubble'
     });
     //remove pasted images
