--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -1,17 +1,21 @@
 <div class="contentForm" id="postForm" {{#if isMember}}communityid="{{communityData._id}}" {{/if}}>
+<input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose image" name="postImage" multiple style="display:none;">
     <div id="editor" class="editable-post-content editable-text" id="postContent">
       <p><br></p>
     </div>
   <div class="form-row my-2" id="postContentWarningsContainer">
     <input type="text" class="form-control" name="postContentWarnings" id="postContentWarnings" placeholder="Warn others about your post's content." {{#if sessionFlash.errorContentWarnings }}value="{{sessionFlash.errorContentWarnings}}" {{/if}} />
   </div>
+  <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
+    <div class="my-2 linkPreviewAddingForm"> {{!todo: this is what you're currently working on... change the stuff below, add a "go button" that calls addLinkPreview on the ql-container and clears and hides the field for future use, etc}}
+      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
+      <button class="btn btn-primary btn-fade ml-3 link-add">Yes, Please Add This Link He Is A Good Link</button>
+    </div>
+  </div>
   <div class="form-row mb-2" id="imagePreviewContainer">
   </div>
   <div class="form-row my-2 card p-1" id="emojiWindow" style="display:none">
     {{> emojilist }}
-  </div>
-  <div id="image-preview-holder" class="form-row post-controls image-preview-holder">
-    <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose image" name="postImage" multiple>
   </div>
   <div id="bottomPostControlsRow" class="form-row mt-2 post-controls">
     {{! Hide this div in communities}}
@@ -26,6 +30,7 @@
     </div>
     {{/unless}}
     <div class="rightSideControls">
+      <button type="button" class="btn btn-primary btn-fade" id="postLinkButton"><i class="fas fa-link"></i></button>
       <button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button>
       <button type="button" class="btn btn-primary btn-fade" id="emojiWindowButton"><i class="far fa-smile"></i></button>
       <button type="button" class="btn btn-primary btn-fade" id="postContentWarningsButton">CWs</button>
