--- a/views/partials/scriptPartials/textEditorScripts.handlebars
+++ b/views/partials/scriptPartials/textEditorScripts.handlebars
@@ -178,10 +178,6 @@
         placeholder: placeholder ? placeholder : 'Write something, highlight text to format.',
         theme: 'bubble'
     });
-    //remove pasted images
-    quill.clipboard.addMatcher("img", function(node, delta) {
-        return { ops: [] };
-    });
     //remove pasted formatting that we don't support
     quill.clipboard.addMatcher("*", function(node, delta) {
         for (var i = 0; i < delta.ops.length; i++) {
@@ -217,43 +213,44 @@
     element.hasContent = function() {
         return $(element).text().trim().length !== 0;
     }
-    element.specialAddImages = function(imgarray) {
-        var fileInput = $(this).closest('.new-comment-form, .contentForm').find(".file-input");
-        fileInput[0].pastedFiles = imgarray;
-        //we attach that function to the file input object events when necessary. can't do them all at once 'cause they're not loaded all at once
-        if (!fileInput[0].changeEventAttached) {
-            fileInput.change(fileselected);
-            fileInput[0].changeEventAttached = true;
-        }
-        fileInput.change();
-    }
     //listen for and use pasted image data
     element.onpaste = function(e) {
         // event.originalEvent.clipboard for newer chrome versions
         var items = (event.clipboardData || event.originalEvent.clipboardData).items;
-        // find pasted image among pasted items
-        var imgarray = [];
         for (var i = 0; i < items.length; i++) {
-            if (items[i].type.indexOf("image") === 0) {
-                imgarray.push(items[i].getAsFile());
+            if(element.imagesAdded > 3){
+                bootbox.alert("sorry, we only take 4 images at once atm");
+                break;
+            }else{
+                if (items[i].type.indexOf("image") === 0) {
+                    element.addImage(items[i].getAsFile());
+                    element.imagesAdded++;
+                }
             }
         }
-        this.specialAddImages(imgarray)
     }
     //listen for and use dragged-and-dropped images
     element.ondrop = function(ev) {
         ev.preventDefault();
         $(".post-controls").css('display', 'flex'); //just in case the user hasn't previously clicked in the text area
         if (ev.dataTransfer.items) {
-            var imgarray = [];
             for (var i = 0; i < ev.dataTransfer.items.length; i++) {
-                if (ev.dataTransfer.items[i].kind === 'file' && ev.dataTransfer.items[i].type.indexOf("image") === 0) {
-                    imgarray.push(ev.dataTransfer.items[i].getAsFile());
+                if(element.imagesAdded > 3){
+                    bootbox.alert("sorry, we only take 4 images at once atm");
+                    break;
+                }else if (ev.dataTransfer.items[i].kind === 'file' && ev.dataTransfer.items[i].type.indexOf("image") === 0) {
+                    element.addImage(ev.dataTransfer.items[i].getAsFile());
                 }
             }
-            this.specialAddImages(imgarray);
         } else {
-            this.specialAddImages(ev.dataTransfer.files); //the code in fileselected() will have to make sure they at least have the apparent mime type of supported images
+            for (var i = 0; i < ev.dataTransfer.files.length; i++) {
+                if(element.imagesAdded > 3){
+                    bootbox.alert("sorry, we only take 4 images at once atm");
+                    break;
+                }else if (ev.dataTransfer.files[i].type.indexOf("image") === 0) {
+                    element.addImage(ev.dataTransfer.files[i]);
+                }
+            }
         }
         $("#bodyFader").fadeOut(100,function(){
             $("#bodyFader").remove();
@@ -272,12 +269,6 @@
     }
 
     element.imagesAdded = 0;
-
-
-
-
-
-
 }
 //incremented and decremented and reset by drag event listeners to keep track of whether the dragged thing is still in our window or not
 var dragcounter = 0;
