--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -7,7 +7,7 @@
     <input type="text" class="form-control" name="postContentWarnings" id="postContentWarnings" placeholder="Warn others about your post's content." {{#if sessionFlash.errorContentWarnings }}value="{{sessionFlash.errorContentWarnings}}" {{/if}} />
   </div>
   <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
-    <div class="my-2 linkPreviewAddingForm"> {{!todo: this is what you're currently working on... change the stuff below, add a "go button" that calls addLinkPreview on the ql-container and clears and hides the field for future use, etc}}
+    <div class="my-2 linkPreviewAddingForm">
       <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
       <button class="btn btn-primary btn-fade ml-3 link-add">Yes, Please Add This Link He Is A Good Link</button>
     </div>
