--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -223,7 +223,7 @@ $(function(){
 
 $(function(){
   $("body").on('click', '#postImageButton', function (e) {
-    let ourFileInputGuy = $(this).closest('.contentForm').children('.file-input'); //bit sketchy! oh well
+    let ourFileInputGuy = $(this).closest('.contentForm, .new-comment-form').children('.file-input');
     //attach the function to the file input object events when necessary. can't do them all at once 'cause they're not loaded all at once
     if (!ourFileInputGuy[0].changeEventAttached) {
       ourFileInputGuy.change(function(e){
@@ -234,7 +234,6 @@ $(function(){
             break;
           }else{
             n.addImage(this.files[i]);
-            n.imagesAdded++;
           }
         }
       }); //basically, i think this should call an addImage function on the relevant ql-container instead, which inserts the image preview into the quill... area
@@ -256,7 +255,12 @@ $("body").on('click', ".link-add", function(e){
   var input = $(this).siblings('input')
   var url = input.val();
   input.val('');
-  $(this).closest('.contentForm, .new-comment-form').children('.ql-container')[0].addLinkPreview(url);
+  var subject = $(this).closest('.contentForm, .new-comment-form').children('.ql-container')[0];
+  if(subject.linkPreviewsAdded < 10000){ //this could probably be changed to something lower
+    subject.addLinkPreview(url);
+  }else{
+    bootbox.alert("we only take 10000 link previews per post, sorry");
+  }
 })
 
   //function for removing an image from a post or comment
@@ -436,22 +440,6 @@ $("body").on('click', ".link-add", function(e){
       });
     }
   })
-
-
-  //tell the server not to keep any images that are in limbo when the tab they're in is closed/refreshed/whatever.
-  //um someone rewrite this so it works with comment images. the server's auto-deleter will take care of temp images once they're more than
-  //an hour old anyway though
-  /*
-  $(window).on("unload", function (e) {
-    uploadedImageUrls.forEach(function (url) {
-      if (url) {
-        $.post("/cleartempimage", {
-          imageURL: url
-        });
-      }
-    })
-  });
-  */
 })
   //IMAGE DRAG-AND-DROP ORDERING STUFF
 
